--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -24,8 +24,8 @@
                 <div class="valid-feedback">Looks Good!!</div>
             </div>
             <div class="mb-3">
-                <label for="formFile" class="form-label">Profile Image</label>
-                <input class="form-control" type="file" id="formFile" name="image">
+                <label for="image" class="form-label">Profile Image</label>
+                <input class="form-control" type="file" id="image" name="image">
                 <div class="valid-feedback">Looks Good!!</div>
             </div>
             <div class="mb-3">
