--- a/views/partials/Navbar.ejs
+++ b/views/partials/Navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark <%= typeof noNavbarMargin !== 'undefined' && noNavbarMargin ? '' : '' %>">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">PassionPods</a>
       <button
