--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,8 +1,14 @@
+<% noNavbarMargin = true %>
+<% isIndexPage = true %>
 <% layout('layouts/boilerplate') %>
+<!-- <div class="w-100 mb-3" style="margin: 0; padding: 0;">
+    <div id="map" style="width: 100%; height: 350px;"></div>
+</div> -->
+
     <h1>Find All the Users!!</h1>
-    <div>
-        <a href="/users/new">Add Yourself In!!</a>
-    </div>
+    <div class="mb-3">
+        <a href="/users/new" class="btn btn-success">Add Yourself In!!</a>
+    </div>    
     <!-- <ul> -->
         <% for (let user of users) { %>
             <!-- <li><a href="/users/<%= user._id %>"><%= user.fullName %></a></li>  -->
@@ -27,3 +33,11 @@
         <% } %>
     <!-- </ul> -->
 
+    <script>
+        const maptilerApiKey = '<%- process.env.MAPTILER_API_KEY %>';
+        window.usersData = <%- JSON.stringify(users) %>;
+    </script>
+    
+    <script type="module" src="/javascripts/clusterMap.js"></script>
+
+    
